--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=jdbc:h2:file:./testdb
 
+server.port=${PORT:8080}
+
 # prikaz SQL query-a u consoli/logu
 spring.jpa.show-sql=true
 
